# custom_data_gpt

./: .gitignore  README.md  README_ZH.md  faiss.pkl  main.py  main_api.py  process.py  pyproject.toml  save_model.py  server.py  training.index
test/: chat_api.test.py  chat_debox_api.test.py  chat_zym_api.test.py  text.txt  train_api.test.py  ukapi.py  ukapi_test.py  upload_prompt_api.test.py
training/facts/: a.txt
training/models/: train_model_name.index  train_model_name.pkl  train_model_name_path_test.index  train_model_name_path_test.pkl
training/prompt/: debox.txt  if-u-were-me.txt  master.txt  zym.txt
training/prompt/user_prompt/: debox.txt  ukapi.txt  zym.txt
utils/: flask_input_fixed.py  get_file_size.py  translate.py
