[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
langchain = "^0.0.125"
openai = "^0.27.2"
faiss-cpu = "^1.7.3"
"discord.py" = "^2.1.0"
tiktoken = "^0.2.0"
Flask-Inputs = "^0.3.0"
jsonschema = "^4.17.3"
langdetect = "^1.0.9"
googletrans = "4.0.0-rc1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"